fixed alignment

--- a/aft25/assets/aftCustome25.css
+++ b/aft25/assets/aftCustome25.css
@@ -306,8 +306,10 @@ table .paper-title {
 
 .priceTable th:nth-child(2),
 .priceTable th:nth-child(3),
+.priceTable th:nth-child(4),
 .priceTable td:nth-child(2),
-.priceTable td:nth-child(3) {
+.priceTable td:nth-child(3),
+.priceTable td:nth-child(4) {
     text-align: end;
 }
 
